k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels:
    name: three-tier
