k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000

      containers:
        - name: frontend
          image: "loveluacr.azurecr.io/frontend:53"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

          # emptyDir volumes allow nginx to write pid/temp files
          # while keeping readOnlyRootFilesystem: true
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-cache
              mountPath: /var/cache/nginx

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

      volumes:
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
